# FeedForward_NeuralNetwork_Cpp

./: .gitignore  CMakeLists.txt
include/: hidden_layer.hpp  layer.hpp  matrix_utility.hpp  neural_network.hpp  output_layer.hpp
src/: hidden_layer.cpp  layer.cpp  main.cpp  matrix_utility.cpp  neural_network.cpp  output_layer.cpp
